# ACA_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.xml  dashboard_demo
MQTT-FX/scripts/: 06__ACA_dashboard_final.js
Prove_cpp/: prova1  prova1.cpp
Prove_cpp/cmake/: CMakeLists.txt  provaCmake_demo
Prove_cpp/cmake/include/: consumer.hpp
Prove_cpp/cmake/src/: consumer.cc  main.cc
Prove_cpp/merge/: README.txt  SynchronizedQueue.hpp  main  main.cc
Prove_cpp/mosquitto/: main  main.cpp  readme.txt
Prove_cpp/thread/: SynchronizedQueue.h  consumer.h  main  main.cpp  readme.txt
dashboard/: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  dashboard_demo
dashboard/include/dashboard/: gnuplot_api.hpp  plot_description.hpp  process_communicator.hpp  render.hpp  window.hpp
dashboard/scripts/: build_opencv.sh  clang_autocomplete.in
dashboard/src/: main.cc
dashboard/src/opencv2/: cvconfig.h
include/dashboard/: SynchronizedQueue.hpp  config.hpp  consumer.hpp  consumerMain.hpp  myMosquitto.hpp  plotter.hpp  producer.hpp  string_utility.hpp
src/: config.cc  consumer.cc  consumerMain.cc  gnuplot_api.cc  main.cc  plot_description.cc  plotter.cc  process_communicator.cc  window.cc
